# libtorch_demo

./: CMakeLists.txt  main.cpp
